# python_cgi

./: test.py
c_control/: authpubkey.py  cert.py  clear.py  deviceinfo.py  getcert.py
c_control/c_source/: CMakeLists.txt  Demo_log.txt  Makefile  a.out  alg_performances.c  alg_performances.h  demo_skf.c  dev_application_funs.c  dev_container_funs.c  dev_control_funs.c  dev_info.c  dev_skf_expand_interface.c  export_cert.c  fdwsf.tar.tgz  mycompile.sh  skf.h  test.c  test.h.gch  test_update_firmware.c
c_control/c_source/fdwsf/: README  clear_secure_state.c  config.ini  devkey.c  import_cert.c
